[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iris-sc"
version = "0.1.0"
description = "IRIS: Isoform-Resolved Inference for Single-cells — isoform-aware scRNA-seq analysis for long-read data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["single-cell", "RNA-seq", "isoform", "long-read", "nanopore", "scRNA-seq", "DTU", "IRIS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy>=1.24,<3",
    "pandas>=2.0,<3",
    "scipy>=1.11,<2",
    "scikit-learn>=1.3,<2",
    "scanpy>=1.9,<2",
    "anndata>=0.10,<1",
    "igraph>=0.11,<1",
    "umap-learn>=0.5,<1",
    "h5py>=3.9,<5",
    "numba>=0.58,<1",
    "tqdm>=4.60,<5",
]

[project.optional-dependencies]
ase = ["pysam>=0.21,<1"]
report = ["plotly>=5.0,<6", "jinja2>=3.0,<4"]
all = ["pysam>=0.21,<1", "plotly>=5.0,<6", "jinja2>=3.0,<4", "leidenalg>=0.10,<1"]
dev = ["pytest>=7.0,<9", "pytest-cov>=4,<6"]

[project.scripts]
iris = "iris._cli:cli"

[project.urls]
Homepage = "https://github.com/iris-sc/iris"
Documentation = "https://iris-sc.readthedocs.io"
Repository = "https://github.com/iris-sc/iris"

[tool.hatch.build.targets.wheel]
packages = ["src/iris"]

[tool.pytest.ini_options]
testpaths = ["tests"]
